[inline-edit] fixed comoponent jumping on switch

--- a/semcore/inline-edit/src/style/inline-edit.shadow.css
+++ b/semcore/inline-edit/src/style/inline-edit.shadow.css
@@ -44,7 +44,7 @@ SEdit[exiting] {
 SView {
   cursor: pointer;
   opacity: 1;
-  transition: 0.1s ease-in-out;
+  transition: opacity 0.1s ease-in-out;
 }
 
 SView[hiddenView] {
